--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,16 @@ edition = "2024"
 [dependencies]
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+solana-client = "2.3.2"
+solana-sdk = "2.3.1"
 tokio = { version = "1.45.1", features = ["full"] }
+url = "2.5.4"
 vercel_runtime = "1.1.6"
 
 [[bin]]
 name = "solana-rust-https-server-vercel"
 path = "api/hello.rs"
+
+[[bin]]
+name = "solana-rust-https-server-vercel-balance"
+path = "api/balance.rs"
